test/asm/revchar.err
error: REVCHAR: Multiple character mappings to values
    at revchar.asm::test(13) <- revchar.asm(22)
error: REVCHAR: No character mapping to values
    at revchar.asm::test(13) <- revchar.asm(23)
Assembly aborted with 2 errors!
